feat: 공개 장소 조회 API 구현 (#32)
